--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     font-family: "Azeret Mono", monospace;    
     /* font-family: sans-serif; */
     width: 1583px;
+    margin: auto;
 }
 
 h1 {
@@ -22,6 +23,10 @@ h1 {
 
 h2 {
     font-size: 2.4rem;
+}
+
+h3 {
+    font-size: 2rem;
 }
 
 p {
@@ -359,4 +364,25 @@ main {
 .support-container .contact-details > * {
     margin: 3.5rem 0;
     color: white;
+}
+
+/* #################### footer section ##################### */
+
+#footer{
+    display: flex;
+    justify-content: space-between;
+    padding: 4rem 15rem;
+    background-color: rgba(13, 19, 33, 0.03);
+}
+
+#footer .social-icons * {
+    margin: 0 1rem;
+}
+
+@media screen 
+and (min-device-width : 320px) 
+and (max-device-width : 1582px) {
+    :root {
+        width: 100%;
+    }
 }
